adding working video player

--- a/Pages/video-player.html
+++ b/Pages/video-player.html
@@ -64,7 +64,7 @@
                     </li>
                 </ul>
             </div>
-            <video class="video-player" src="./video/1.mp4"></video>
+            <video class="video-player" src="https://res.cloudinary.com/dsxheywlc/video/upload/v1692342170/study-zone/15_r4fuyw.mp4"></video>
         </div>
     </div>
     <script src="../JavaScript/video-player.js"></script>
