dashboard code working condition

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">
-                            <button class="button-62" role="button">Dashboard</button>
+                            <a class="nav-link" href="./Pages/dashBoard.html">
+                               <button class="button-62" role="button">Dashboard</button>
                             </a>
                         </li>
                         <!-- <li class="nav-item">
