--- a/Pages/courses.html
+++ b/Pages/courses.html
@@ -69,7 +69,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="../Pages/dashBoard.html"
                 ><button type="button" class="btn btn-primary">
                   Dashboard
                 </button></a
