--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href=
     "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
 
+    
+
 </head>
 <body>
 
@@ -139,30 +141,49 @@
 
 
 
-        <div class="container mt-5">
+        <div class="container mt-5 px-5">
             <div class="row">
-                <div class="col-sm-6 col-md-3">
-                  <h3 class="value1"></h3>
-                  <p>Subscriber on Youtube</p>
+                <div class="col-sm-6 col-md-3 text-center my-3  d-flex">
+                    <img width="100" height="100" src="https://img.icons8.com/bubbles/100/000000/youtube-play.png" alt="youtube-play"/>
+                    <div class="span">
+                        <p class="mt-3">Youtube</p>
+                        <h3 class="value1 mt-n3 h5"></h3>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
-                    <h3 class="value2"></h3>
-                    <p>Followers on Twitter</p>
+
+                <div class="col-sm-6 col-md-3 text-center my-3  d-flex">
+                    <img width="100" height="100" src="https://img.icons8.com/bubbles/100/github.png"/>
+                    <div class="span">
+                        <p class="mt-3">Git-Hub</p>
+                        <h3 class="value2 mt-n3 h5"></h3>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
-                    <h3 class="value3"></h3>
-                    <p>Followers on Instagram</p>
+
+                <div class="col-sm-6 col-md-3 text-center my-3  d-flex">
+                    <img width="100" height="100" src="https://img.icons8.com/bubbles/100/instagram-new--v2.png"/>
+                    <div class="span">
+                        <p class="mt-3">Instagram</p>
+                        <h3 class="value3 mt-n3 h5"></h3>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
-                    <h3 class="value4"></h3>
-                    <p>Followers on Linkedin</p>
+
+                <div class="col-sm-6 col-md-3 text-center my-3  d-flex">
+                    <img width="100" height="100" src="https://img.icons8.com/bubbles/100/linkedin.png"/>
+                    <div class="span">
+                        <p class="mt-3">Linkedin</p>
+                        <h3 class="value4 mt-n3 h5"></h3>
+                    </div>
                 </div>
             </div>
         </div>
 
+        <hr class="justify-content-center mx-auto opacity-50 mt-5" style="width: 25%;">
+
+        
+
 
         <!-- =========== Courses ============== -->
-       <h2 class="d-flex justify-content-center mt-5 ">Our Courses</h2> 
+       <h2 class="d-flex justify-content-center mt-5 mb-0">Our Courses</h2> 
 
         <div class="container mt-5">
             <div class="row example"></div>
