--- a/index.html
+++ b/index.html
@@ -183,7 +183,11 @@
 
 
         <!-- =========== Courses ============== -->
-       <h2 class="d-flex justify-content-center mt-5 mb-0">Our Courses</h2> 
+    /
+
+        <p class="text-center justify-content-center mt-4 mx-5 px-5 h5  " style="color: rgb(135, 135, 135); font-family: poppins; line-height: 1.6; font-weight:300 ;">
+            <span style="font-weight: 500; color: lightsalmon;">EduFlex Academy</span> is your one-stop destination for courses that span a multitude of subjects and disciplines.<br>Whether you're looking to delve into the world of coding, explore creative arts, enhance your language skills, or grasp the fundamentals of business, we have a course for you.
+        </p>
 
         <div class="container mt-5">
             <div class="row example"></div>
