added search bar for course cat-log

--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
             <span style="font-weight: 500; color: lightsalmon;">EduFlex Academy</span> is your one-stop destination for courses that span a multitude of subjects and disciplines.<br>Whether you're looking to delve into the world of coding, explore creative arts, enhance your language skills, or grasp the fundamentals of business, we have a course for you.
         </p>
 
+        <!-- The Search Bar Section -->
+
+        <form class="d-flex mx-auto " style="width: 600px; margin-top: 6%;" role="search">
+            <input class="form-control me-2 rounded-start p-3" style="border-top-left-radius: 19px; border-bottom-left-radius: 19px; border-top-right-radius: 0%; border-bottom-right-radius: 0%;" type="search" placeholder="Search Courses...." aria-label="Search">
+            <button class="btn btn-success " style="border-top-left-radius: 0%;border-bottom-left-radius: 0%; border-top-right-radius: 19px; border-bottom-right-radius: 19px;" type="submit"><i class="bi-search"></i></button>
+          </form>
+
+
+
+
         <div class="container mt-5">
             <div class="row example"></div>
         </div>
