update folder structure

--- a/Pages/video-player.html
+++ b/Pages/video-player.html
@@ -13,7 +13,9 @@
     <nav class="sidebar">
        <header class="back-to-home">
           <i class="fa-solid fa-arrow-left"></i>
-          <p>Back to Home</p>
+          <a href="./dashBoard.html">
+              <p>Back to Dashboard</p>
+          </a>
        </header>
        <div class="scrollbaar-inner"> <!-- Corrected class name -->
            <div class="example">
