--- a/Pages/dashBoard.html
+++ b/Pages/dashBoard.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Pages/courses.html">Courses</a>
+                    <a class="nav-link" href="./courses.html">Courses</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
