--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light nav-conatiner ">
     
-                <a class="navbar-brand " href="#"><img src="./assest/index-images/new-logo.png" alt="logo-design" class="img-fluid logo-design"></a>
+                <a class="navbar-brand " href="./index.html"><img src="./assest/index-images/new-logo.png" alt="logo-design" class="img-fluid logo-design"></a>
     
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,7 +104,7 @@
                         </li>
 
                         <li class="nav-item active">
-                            <a class="nav-link" href="./Pages/dashBoard.html">
+                            <a class="nav-link" href="#">
                                <button class="button-62" role="button">Login ➧</button>
                             </a>
                         </li>
