--- a/Pages/courses.html
+++ b/Pages/courses.html
@@ -87,6 +87,8 @@
       </nav>
 
       <!-- ================================== Courses ================================= -->
+
+      <h2>Start Learning With Study Zone</h2>
       <div>
         <div class="container mt-5">
             <div class="row example"></div>
