--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
                             <li><a href="#" class="text-light">Privacy Policy</a></li>
                             <li><a href="#" class="text-light">Terms of Use</a></li>
                             <li><a href="#" class="text-light">FAQ</a></li><br>
-                            <a href="#" class="text-light me-3"><i class="fab fa-facebook-f" class="icon"></i></a>
-                            <a href="#" class="text-light me-3"><i class="fab fa-twitter" class="icon"></i></a>
-                            <a href="#" class="text-light me-3"><i class="fab fa-instagram" class="icon"></i></a><br>
+                            <a href="#" class="text-light me-3"><i class="fab fa-facebook-f" ></i></a>
+                            <a href="#" class="text-light me-3"><i class="fab fa-twitter" ></i></a>
+                            <a href="#" class="text-light me-3"><i class="fab fa-instagram"></i></a><br>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3">
