inserted footer in courses & dashboard

--- a/Pages/courses.html
+++ b/Pages/courses.html
@@ -8,7 +8,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="../css/index.css">
-    <title>Study Zone</title>
+    <title>Courses|LearningHub</title>
   </head>
   <body>
     <div>
@@ -97,30 +97,44 @@
 
       <!-- ================================== Footer ================================= -->
 
+      <!-- ================================== FOOTER ================================= -->
       <footer class="bg-dark text-light mt-5 py-4">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-3">
-                    <h3>Follow Us</h3>
-                    <a href="#" class="text-light me-3"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-light me-3"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-light me-3"><i class="fab fa-instagram"></i></a>
+                    <h3>Learn</h3>
+                    <hr class="line">
+                    <p> eLearning helps learners discover, read, watch and interact—at their own pace. This type of customized eLearning creates an educational atmosphere more conducive to learning and retention.
+                        JOIN US FOR BETTER LEARNING !!
+                    </p>
+                    <a href="">About Us</a><br>
+                    <a href="">Terms & policy</a>
                 </div>
                 <div class="col-sm-6 col-md-3">
-                    <h3>Contact Us</h3>
-                    <p>Email: info@example.com</p>
+                    <h3>EduFlex</h3>
+                    <hr class="line">
+                    <p>Email: info@EduFlex.com</p>
                     <p>Phone: +123 456 7890</p>
+                    <p>What We Offer</p>
+                    <p>Leadership</p>
+                    <p>Careers</p>
+                    <p>Catalog</p>
                 </div>
                 <div class="col-sm-6 col-md-3">
                     <h3>Useful Links</h3>
+                    <hr class="line">
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-light">Privacy Policy</a></li>
                         <li><a href="#" class="text-light">Terms of Use</a></li>
-                        <li><a href="#" class="text-light">FAQ</a></li>
+                        <li><a href="#" class="text-light">FAQ</a></li><br>
+                        <a href="#" class="text-light me-3"><i class="fab fa-facebook-f" ></i></a>
+                        <a href="#" class="text-light me-3"><i class="fab fa-twitter" ></i></a>
+                        <a href="#" class="text-light me-3"><i class="fab fa-instagram"></i></a><br>
                     </ul>
                 </div>
                 <div class="col-sm-6 col-md-3">
                     <h3>Newsletter</h3>
+                    <hr class="line">
                     <p>Subscribe to our newsletter for updates.</p>
                     <form>
                         <input type="email" class="form-control mb-2" placeholder="Your Email">
