--- a/Pages/dashBoard.html
+++ b/Pages/dashBoard.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Dashboard LearningHub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="./../css/index.css">
   </head>
   <body>
 
@@ -104,40 +105,53 @@
          
       </div>
 
-        <!-- ================================== FOOTER ================================= -->
-        <footer class="bg-dark text-light mt-5 py-4">
-          <div class="container">
-              <div class="row">
-                  <div class="col-sm-6 col-md-3">
-                      <h3>Follow Us</h3>
-                      <a href="#" class="text-light me-3"><i class="fab fa-facebook-f"></i></a>
-                      <a href="#" class="text-light me-3"><i class="fab fa-twitter"></i></a>
-                      <a href="#" class="text-light me-3"><i class="fab fa-instagram"></i></a>
-                  </div>
-                  <div class="col-sm-6 col-md-3">
-                      <h3>Contact Us</h3>
-                      <p>Email: info@example.com</p>
-                      <p>Phone: +123 456 7890</p>
-                  </div>
-                  <div class="col-sm-6 col-md-3">
-                      <h3>Useful Links</h3>
-                      <ul class="list-unstyled">
-                          <li><a href="#" class="text-light">Privacy Policy</a></li>
-                          <li><a href="#" class="text-light">Terms of Use</a></li>
-                          <li><a href="#" class="text-light">FAQ</a></li>
-                      </ul>
-                  </div>
-                  <div class="col-sm-6 col-md-3">
-                      <h3>Newsletter</h3>
-                      <p>Subscribe to our newsletter for updates.</p>
-                      <form>
-                          <input type="email" class="form-control mb-2" placeholder="Your Email">
-                          <button type="submit" class="btn btn-primary">Subscribe</button>
-                      </form>
-                  </div>
-              </div>
-          </div>
-      </footer>
+         <!-- ================================== FOOTER ================================= -->
+         <footer class="bg-dark text-light mt-5 py-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <h3>Learn</h3>
+                        <hr class="line">
+                        <p> eLearning helps learners discover, read, watch and interact—at their own pace. This type of customized eLearning creates an educational atmosphere more conducive to learning and retention.
+                            JOIN US FOR BETTER LEARNING !!
+                        </p>
+                        <a href="">About Us</a><br>
+                        <a href="">Terms & policy</a>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <h3>EduFlex</h3>
+                        <hr class="line">
+                        <p>Email: info@EduFlex.com</p>
+                        <p>Phone: +123 456 7890</p>
+                        <p>What We Offer</p>
+                        <p>Leadership</p>
+                        <p>Careers</p>
+                        <p>Catalog</p>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <h3>Useful Links</h3>
+                        <hr class="line">
+                        <ul class="list-unstyled">
+                            <li><a href="#" class="text-light">Privacy Policy</a></li>
+                            <li><a href="#" class="text-light">Terms of Use</a></li>
+                            <li><a href="#" class="text-light">FAQ</a></li><br>
+                            <a href="#" class="text-light me-3"><i class="fab fa-facebook-f" ></i></a>
+                            <a href="#" class="text-light me-3"><i class="fab fa-twitter" ></i></a>
+                            <a href="#" class="text-light me-3"><i class="fab fa-instagram"></i></a><br>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <h3>Newsletter</h3>
+                        <hr class="line">
+                        <p>Subscribe to our newsletter for updates.</p>
+                        <form>
+                            <input type="email" class="form-control mb-2" placeholder="Your Email">
+                            <button type="submit" class="btn btn-primary">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </div>
     
