added signup page

--- a/index.html
+++ b/index.html
@@ -102,9 +102,14 @@
                                <button class="button-62" role="button">Dashboard</button>
                             </a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/Pages/Sign Up.html">
+                               <button class="button-62" role="button">Sign Up ➧</button>
+                            </a>
+                        </li>
 
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/Pages/login-page.html">
                                <button class="button-62" role="button">Login ➧</button>
                             </a>
                         </li>
