updating Feature section

--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
             <div class="row d-flex justify-content-center mt-5">
                 <div class="col-md-6 text-center">
                     <h3 style="font-family: poppins, sans-serif;">Create pages quickly</h1>
-                    <p style="color: rgb(135, 135, 135);">Intuitive drag and drop block-based builder. Choose between<br> hundreds of templates and create high-converting landing pages</p>
+                    <p class="px-4 mt-4" style="color: rgb(135, 135, 135);">Intuitive drag and drop block-based builder. Choose between hundreds of templates and create high-converting landing pages</p>
                 </div>
                 <div class="col-md-6 ms-4 text-center">
                     <h3 style="font-family: poppins, sans-serif;"> Magic beauty</h3>
-                    <p style="color: rgb(135, 135, 135);"> Write your content once and cycle automatically<br> through dozens of different designs to select the one for the goal at hand</p>
+                    <p class="px-4 mt-4" style="color: rgb(135, 135, 135);"> Write your content once and cycle automatically through dozens of different designs to select the one for the goal at hand</p>
                 </div>
             </div>
             
