--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         
          <!-- New Course Section -->
 
-         <h3 class="d-flex justify-content-center" style="font-size: 40px; margin-top: 7%; font-family: Poppins; ">New Courses</h3>
+         <h3 class="d-flex justify-content-center" style="font-size: 40px; margin-top: 7%; font-family: Poppins; font-weight: bold; ">New Courses</h3>
 
         <!-- Course card -->
 
@@ -309,7 +309,7 @@
         
         <!-- Featured Section -->
 
-        <h3 class="d-flex justify-content-center mb-n4" style="font-size: 40px; margin-top: 5%; font-family: Poppins;">Featured</h3>
+        <h3 class="d-flex justify-content-center mb-n4" style="font-size: 40px; margin-top: 5%; font-family: Poppins; font-weight: bold">Featured</h3>
 
         <div class="container mt-5">
             <div class="row">
