final name design update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light nav-conatiner ">
     
-                <a class="navbar-brand " href="./index.html"><img src="./assest/index-images/new-logo.png" alt="logo-design" class="img-fluid logo-design"></a>
+                <a class="navbar-brand " href="./index.html"><p class="my-auto" style="font-weight: bold; font-family: POPPINS; ">Learning<span class="px-1" style="font-weight: bold; font-family: POPPINS; border-radius: 18px;background-color: orange; color:whitesmoke;">Hub</span></p></a>
     
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
