--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         <form class="d-flex mx-auto " style="width: 600px; margin-top: 6%;" role="search">
             <input class="form-control me-2 rounded-start p-3" style="border-top-left-radius: 19px; border-bottom-left-radius: 19px; border-top-right-radius: 0%; border-bottom-right-radius: 0%;" type="search" placeholder="Search Courses...." aria-label="Search">
-            <button class="btn btn-success " style="border-top-left-radius: 0%;border-bottom-left-radius: 0%; border-top-right-radius: 19px; border-bottom-right-radius: 19px;" type="submit"><i class="bi-search"></i></button>
+            <button class="btn " style=" background-color: darkorange; color: whitesmoke; border-top-left-radius: 0%;border-bottom-left-radius: 0%; border-top-right-radius: 19px; border-bottom-right-radius: 19px;" type="submit"><i class="bi-search"></i></button>
         </form>
 
         
