--- a/index.html
+++ b/index.html
@@ -93,9 +93,6 @@
                             <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
                           </svg>
 
-                          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-cart3 m-2 " viewBox="0 0 16 16">
-                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                          </svg> -->
                      </div>
 
 
@@ -126,7 +123,7 @@
             <div class="row main-content">
                 <div class="col-sm-6 col-md-4 main-description">
                     <h1>Earn <span>Knowledge </span> & Complete Your Lesson</h1>
-                    <p>Empower your learning journey with our interactive e-learning platform. Access a diverse range of courses, expert instructors, and engaging resources. Achieve your goals at your own pace, anywhere, anytime. Join our vibrant community and embrace a new era of education.</p>
+                    <p style="color: rgb(135, 135, 135);">Empower your learning journey with our interactive e-learning platform. Access a diverse range of courses, expert instructors, and engaging resources. Achieve your goals at your own pace, anywhere, anytime. Join our vibrant community and embrace a new era of education.</p>
 
                  
                     <button class="learn-more mt-3">
