--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="./Pages/About.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./Pages/courses.html">Courses</a>
