modified some css

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -179,30 +179,30 @@
     <div class="our-team w-100 h-auto  " style="background-image: linear-gradient(to right, #f0d3ce, #efd4d9, #ebd7e2, #e4dae9, #dddeec, #dadeec, #d7dfea, #d4dfe9, #d1dde7, #cedae6, #ccd8e5, #c9d5e3);; padding-bottom: 40px;">
         <h1 class=" d-flex justify-content-center p-5 ">Meet Our Team</h1>
         <div class="bg-cards d-flex justify-content-around">
-            <div class="card  d-flex align-items-center justify-content-center border border-1 rounded-4" style="width: 250px; height: 300px;background-color: rgb(252, 252, 252);"><img src="../assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center  border border-1 rounded-4" style="width: 160px; height: 160px;">
+            <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border:2px solid rgb(255, 141, 100);"><img src="../assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                 <h1>####</h1>
                 <h2>####</h2></div>
-                <div class="card  d-flex  align-items-center justify-content-center border border-1 rounded-4" style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+                <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border:2px solid rgb(255, 164, 130);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                     <h1>####</h1>
                     <h2>####</h2></div>
-                    <div class="card  d-flex  align-items-center justify-content-center border border-1 rounded-4" style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+                    <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(168, 161, 161);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                         <h1>####</h1>
                         <h2>####</h2></div>
-                        <div class="card  d-flex  align-items-center justify-content-center border border-1 rounded-4" style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+                        <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(103, 103, 103);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                             <h1>####</h1>
                             <h2>####</h2></div>
         </div>
         <div class="bg-cards d-flex justify-content-around mt-lg-5">
-            <div class="card  d-flex  align-items-center justify-content-center border border-1 rounded-4" style="width: 250px; height: 300px;background-color: rgb(252, 252, 252);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+            <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px;background-color: rgb(252, 252, 252);border:2px solid rgb(255, 141, 100);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                 <h1>####</h1>
                 <h2>####</h2></div>
-                <div class="card  d-flex  align-items-center justify-content-center border border-1 rounded-4" style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+                <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(255, 164, 130);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                     <h1>####</h1>
                     <h2>####</h2></div>
-                    <div class="card  d-flex  align-items-center justify-content-center border border-1 rounded-4" style="width: 250px; height: 300px; background-color:rgb(252, 252, 252);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+                    <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color:rgb(252, 252, 252);border:2px solid rgb(168, 161, 161);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                         <h1>####</h1>
                         <h2>####</h2></div>
-                        <div class="card  d-flex  align-items-center justify-content-center  border border-1 rounded-4" style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
+                        <div class="card  d-flex  align-items-center justify-content-center  " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(103, 103, 103);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                             <h1>####</h1>
                             <h2>####</h2></div>
         </div>
