Linked all pages to About page

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                         <p> eLearning helps learners discover, read, watch and interact—at their own pace. This type of customized eLearning creates an educational atmosphere more conducive to learning and retention.
                             JOIN US FOR BETTER LEARNING !!
                         </p>
-                        <a href="">About Us</a><br>
+                        <a href="./Pages/About.html">About Us</a><br>
                         <a href="">Terms & policy</a>
                     </div>
                     <div class="col-sm-6 col-md-3">
