--- a/Pages/About.html
+++ b/Pages/About.html
@@ -52,7 +52,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-conatiner ">
     
-        <a class="navbar-brand " href="/index.html"><p class="my-auto" style="font-weight: bold; font-family: POPPINS; ">Learning<span class="px-1" style="font-weight: bold; font-family: POPPINS; border-radius: 18px;background-color: orange; color:whitesmoke;">Hub</span></p></a>
+        <a class="navbar-brand " href="../index.html"><p class="my-auto" style="font-weight: bold; font-family: POPPINS; ">Learning<span class="px-1" style="font-weight: bold; font-family: POPPINS; border-radius: 18px;background-color: orange; color:whitesmoke;">Hub</span></p></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,7 @@
                     <a class="nav-link" href="../Pages/About.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="..courses.html">Courses</a>
+                    <a class="nav-link" href="../Pages/courses.html">Courses</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -122,18 +122,18 @@
 
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="./Pages/dashBoard.html">
+                    <a class="nav-link" href="../Pages/dashBoard.html">
                        <button class="button-62" role="button">Dashboard</button>
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/Pages/Sign Up.html">
+                    <a class="nav-link" href="../Pages/Sign Up.html">
                        <button class="button-62" role="button">Sign Up ➧</button>
                     </a>
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="/Pages/login-page.html">
+                    <a class="nav-link" href="../Pages/login-page.html">
                        <button class="button-62" role="button">Login ➧</button>
                     </a>
                 </li>
