--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 </li>
                             
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./Pages/contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
