Added some Javascript

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -42,7 +42,23 @@
     height: 210px;
 
 }
-
+.icons-card {
+        display: none;
+        position: absolute;
+        margin-left: auto;
+        right: 5px;
+        height: auto;
+        background-color: transparent;
+        backdrop-filter: blur(10px);
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        padding: 6px;
+      }
+      
+      .icon {
+        display: block;
+        margin-bottom: 5px;
+      }
     </style>
 </head>
 
@@ -176,35 +192,67 @@
         </div>
     </div>
     </div>
-    <div class="our-team w-100 h-auto  " style="background-image: linear-gradient(to right, #f0d3ce, #efd4d9, #ebd7e2, #e4dae9, #dddeec, #dadeec, #d7dfea, #d4dfe9, #d1dde7, #cedae6, #ccd8e5, #c9d5e3);; padding-bottom: 40px;">
+    <div class="our-team w-100" style="background-image: linear-gradient(to right, #f0d3ce, #efd4d9, #ebd7e2, #e4dae9, #dddeec, #dadeec, #d7dfea, #d4dfe9, #d1dde7, #cedae6, #ccd8e5, #c9d5e3);; padding-bottom: 40px; padding-bottom: 50px;">
         <h1 class=" d-flex justify-content-center p-5 ">Meet Our Team</h1>
         <div class="bg-cards d-flex justify-content-around">
-            <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border:2px solid rgb(255, 141, 100);"><img src="../assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
-                <h1>####</h1>
-                <h2>####</h2></div>
+            <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border:2px solid rgb(255, 141, 100);"><img src="../assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;"><br>
+                <h2>Ajinkya Daf</h2>
+                <h3>Software </h3><div class="icons-card">
+                    <i class="icon fas fa-star">SEFSF</i><br><br>
+                    <i class="icon fas fa-heart">AEFAEF</i><br><br>
+                    <i class="icon fas fa-share">AFSef</i><br><br>
+                  </div></div>
                 <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252); border:2px solid rgb(255, 164, 130);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                     <h1>####</h1>
-                    <h2>####</h2></div>
+                    <h2>####</h2><div class="icons-card">
+                        <i class="icon fas fa-star">SEFSF</i><br><br>
+                        <i class="icon fas fa-heart">AEFAEF</i><br><br>
+                        <i class="icon fas fa-share">AFSef</i><br><br>
+                      </div></div>
                     <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(168, 161, 161);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                         <h1>####</h1>
-                        <h2>####</h2></div>
+                        <h2>####</h2><div class="icons-card">
+                            <i class="icon fas fa-star">SEFSF</i><br><br>
+                            <i class="icon fas fa-heart">AEFAEF</i><br><br>
+                            <i class="icon fas fa-share">AFSef</i><br><br>
+                          </div></div>
                         <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(103, 103, 103);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                             <h1>####</h1>
-                            <h2>####</h2></div>
+                            <h2>####</h2><div class="icons-card">
+                                <i class="icon fas fa-star">SEFSF</i><br><br>
+                                <i class="icon fas fa-heart">AEFAEF</i><br><br>
+                                <i class="icon fas fa-share">AFSef</i><br><br>
+                              </div></div>
         </div>
         <div class="bg-cards d-flex justify-content-around mt-lg-5">
             <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px;background-color: rgb(252, 252, 252);border:2px solid rgb(255, 141, 100);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                 <h1>####</h1>
-                <h2>####</h2></div>
+                <h2>####</h2><div class="icons-card">
+                    <i class="icon fas fa-star">SEFSF</i><br><br>
+                    <i class="icon fas fa-heart">AEFAEF</i><br><br>
+                    <i class="icon fas fa-share">AFSef</i><br><br>
+                  </div></div>
                 <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(255, 164, 130);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                     <h1>####</h1>
-                    <h2>####</h2></div>
+                    <h2>####</h2><div class="icons-card">
+                        <i class="icon fas fa-star">SEFSF</i><br><br>
+                        <i class="icon fas fa-heart">AEFAEF</i><br><br>
+                        <i class="icon fas fa-share">AFSef</i><br><br>
+                      </div></div>
                     <div class="card  d-flex  align-items-center justify-content-center " style="width: 250px; height: 300px; background-color:rgb(252, 252, 252);border:2px solid rgb(168, 161, 161);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                         <h1>####</h1>
-                        <h2>####</h2></div>
+                        <h2>####</h2><div class="icons-card">
+                            <i class="icon fas fa-star">SEFSF</i><br><br>
+                            <i class="icon fas fa-heart">AEFAEF</i><br><br>
+                            <i class="icon fas fa-share">AFSef</i><br><br>
+                          </div></div>
                         <div class="card  d-flex  align-items-center justify-content-center  " style="width: 250px; height: 300px; background-color: rgb(252, 252, 252);border:2px solid rgb(103, 103, 103);"><img src="/assest/index-images/IMG_20220614_190313.jpg" class="align-items-center justify-content-center border border-1 rounded-4" style="width: 160px; height: 160px;">
                             <h1>####</h1>
-                            <h2>####</h2></div>
+                            <h2>####</h2><div class="icons-card">
+                                <i class="icon fas fa-star">SEFSF</i><br><br>
+                                <i class="icon fas fa-heart">AEFAEF</i><br><br>
+                                <i class="icon fas fa-share">AFSef</i><br><br>
+                              </div></div>
         </div>
     </div>
 
@@ -212,7 +260,7 @@
 
 
 
-    <footer class="bg-dark text-light mt-5 py-4">
+    <footer class="bg-dark text-light mt py-5">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-3">
@@ -267,7 +315,21 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+     const cards = document.querySelectorAll('.card');
 
+cards.forEach(card => {
+  const iconsCard = card.querySelector('.icons-card');
+
+  card.addEventListener('mouseenter', () => {
+    iconsCard.style.display = 'block';
+  });
+
+  card.addEventListener('mouseleave', () => {
+    iconsCard.style.display = 'none';
+  });
+});
+  </script>
 </body>
 
 </html>
