--- a/index.html
+++ b/index.html
@@ -550,8 +550,8 @@
                         <p> eLearning helps learners discover, read, watch and interact—at their own pace. This type of customized eLearning creates an educational atmosphere more conducive to learning and retention.
                             JOIN US FOR BETTER LEARNING !!
                         </p>
-                        <a href="">About Us</a><br>
-                        <a href="">Terms & policy</a>
+                        <a href="" class="link">About Us</a><br>
+                        <a href="" class="link">Terms & policy</a>
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <h3>EduFlex</h3>
@@ -581,7 +581,8 @@
                         <p>Subscribe to our newsletter for updates.</p>
                         <form>
                             <input type="email" class="form-control mb-2" placeholder="Your Email">
-                            <button type="submit" class="btn btn-primary">Subscribe</button>
+                            
+                            <a href=""><button type="submit" class="button-62" >Subscribe</button></a>
                         </form>
                     </div>
                 </div>
