--- a/index.html
+++ b/index.html
@@ -505,16 +505,16 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-3">
                         <h3>Learn</h3>
-                        <hr class="line">
+                        <hr id="line">
                         <p> eLearning helps learners discover, read, watch and interact—at their own pace. This type of customized eLearning creates an educational atmosphere more conducive to learning and retention.
                             JOIN US FOR BETTER LEARNING !!
                         </p>
-                        <a href="">About Us</a><br>
-                        <a href="">Terms & policy</a>
+                        <a href="" class="link">About Us</a><br>
+                        <a href="" class="link">Terms & policy</a>
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <h3>EduFlex</h3>
-                        <hr class="line">
+                        <hr id="line">
                         <p>Email: info@EduFlex.com</p>
                         <p>Phone: +123 456 7890</p>
                         <p>What We Offer</p>
@@ -524,7 +524,7 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <h3>Useful Links</h3>
-                        <hr class="line">
+                        <hr id="line">
                         <ul class="list-unstyled">
                             <li><a href="#" class="text-light">Privacy Policy</a></li>
                             <li><a href="#" class="text-light">Terms of Use</a></li>
@@ -536,11 +536,12 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <h3>Newsletter</h3>
-                        <hr class="line">
+                        <hr id="line">
                         <p>Subscribe to our newsletter for updates.</p>
+                        <img src="assest/index-images/LeaRNING hUB (2).png" style="height: 60px; width: 180px; margin-bottom: 10px;">
                         <form>
                             <input type="email" class="form-control mb-2" placeholder="Your Email">
-                            <button type="submit" class="btn btn-primary">Subscribe</button>
+                            <button type="submit" class="button-62">Subscribe</button>
                         </form>
                     </div>
                 </div>
