--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -127,7 +127,7 @@
         </div>
         <div class="col-lg-7">
           <img
-            src="./new-index-image/banner.png"
+            src="./assest/new-index-image/banner.png"
             class="card-img-top img-fluid"
             alt="Image 1"
           />
@@ -273,7 +273,7 @@
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-lg-6">
           <img
-            src="./new-index-image/object.png"
+            src="./assest/new-index-image/object.png"
             alt="Object"
             class="card-img-top img-fluid"
           />
@@ -373,7 +373,7 @@
         </div>
         <div class="col-lg-5 mt-5 pt-5">
           <img
-            src="./new-index-image/join.png"
+            src="./assest/new-index-image/join.png"
             alt=""
             class="img-fluid card-img-top"
           />
@@ -397,7 +397,7 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
             <img
-              src="./new-index-image/suraj-sende.png"
+              src="./assest/new-index-image/suraj-sende.png"
               alt=""
               class="img-fluid card-img-top"
             />
@@ -410,7 +410,7 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
             <img
-              src="./new-index-image/pinki-hole.png"
+              src="./assest/new-index-image/pinki-hole.png"
               alt=""
               class="img-fluid card-img-top"
             />
@@ -423,7 +423,7 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
             <img
-              src="./new-index-image/anand-sir.png"
+              src="./assest/new-index-image/anand-sir.png"
               alt=""
               class="img-fluid card-img-top"
             />
@@ -436,7 +436,7 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
             <img
-              src="./new-index-image/vaishnavi-mam.png"
+              src="./assest/new-index-image/vaishnavi-mam.png"
               alt=""
               class="img-fluid card-img-top"
             />
@@ -455,7 +455,7 @@
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-lg-7">
           <img
-            src="./new-index-image/share.png"
+            src="./assest/new-index-image/share.png"
             alt=""
             class="card-img-top img-fluid"
           />
@@ -496,7 +496,7 @@
         <div class="row m-auto mt-5 mb-5">
           <div class="col-lg-3">
             <img
-              src="./new-index-image/social/Youtube_Oct_Denoiser_Beauty_001_copy_6a63d8ef65.webp"
+              src="./assest/new-index-image/social/Youtube_Oct_Denoiser_Beauty_001_copy_6a63d8ef65.webp"
               alt=""
             />
             <p class="fw-bold" style="font-size: 1.2rem; color: #cd201f">
@@ -505,7 +505,7 @@
           </div>
           <div class="col-lg-3">
             <img
-              src="./new-index-image/social/Linked_In_Oct_Denoiser_Beauty_001_copy_b6e0b974bb.webp"
+              src="./assest/new-index-image/social/Linked_In_Oct_Denoiser_Beauty_001_copy_b6e0b974bb.webp"
               alt=""
             />
             <p class="fw-bold" style="font-size: 1.2rem; color: #0a66c2">
@@ -514,7 +514,7 @@
           </div>
           <div class="col-lg-3">
             <img
-              src="./new-index-image/social/Discord_Oct_Denoiser_Beauty_001_copy_a253ed4d28.webp"
+              src="./assest/new-index-image/social/Discord_Oct_Denoiser_Beauty_001_copy_a253ed4d28.webp"
               alt=""
             />
             <p class="fw-bold" style="font-size: 1.2rem; color: #6a5acd">
@@ -523,7 +523,7 @@
           </div>
           <div class="col-lg-3">
             <img
-              src="./new-index-image/social/Telegram_Oct_Denoiser_Beauty_002_copy_fa9aeac119.webp"
+              src="./assest/new-index-image/social/Telegram_Oct_Denoiser_Beauty_002_copy_fa9aeac119.webp"
               alt=""
             />
             <p class="fw-bold" style="font-size: 1.2rem; color: #0088cc">
@@ -609,7 +609,7 @@
       </div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./JavaScript/index.js"></script>
     <script
       src="https://kit.fontawesome.com/c33a357a73.js"
       crossorigin="anonymous"
