--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav justify-content-center flex-grow-1">
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">Home</a>
+              <a class="nav-link fw-bold" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">Courses</a>
+              <a class="nav-link fw-bold" href="./Pages/courses.html">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">Tutorials</a>
+              <a class="nav-link fw-bold" href="./Pages/courses.html">Tutorials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">Contact</a>
+              <a class="nav-link fw-bold" href="./Pages/contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">About Us</a>
+              <a class="nav-link fw-bold" href="./Pages/">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">Dashboard</a>
+              <a class="nav-link fw-bold" href="./Pages/dashBoard.html">Dashboard</a>
             </li>
           </ul>
         </div>
@@ -57,7 +57,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="./Pages/login-page.html">
                   <button
                     class="btn nav-button-1 fw-bold text-light"
                     style="background-color: #7b4bff; border-color: #812dff">Login 
@@ -65,7 +65,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="./Pages/Sign Up.html">
                   <button
                     class="btn nav-button-2 fw-bold text-light"
                     style="background-color: #ff4b66; border-color: #ff4e69"
