--- a/Pages/courses.html
+++ b/Pages/courses.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="../css/courses.css">
     <title>Courses|LearningHub</title>
   </head>
-  <body>
+  <body class="background-gradiant">
     <div>
 
       <!-- ================================== NAVBAAR ================================= -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light text-center shadow-lg p-3 mb-5 bg-white">
         <div class="container navbaar-container d-flex align-items-center justify-content-between p-1">
           
-          <a class="navbar-brand" href="#">E-Learning</a>
+          <a class="navbar-brand" href="../index.html">E-Learning</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -33,22 +33,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav justify-content-center flex-grow-1">
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./index.html">Home</a>
+                <a class="nav-link fw-bold" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/courses.html">Courses</a>
+                <a class="nav-link fw-bold" href="./courses.html">Courses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/courses.html">Tutorials</a>
+                <a class="nav-link fw-bold" href="./courses.html">Tutorials</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/contact.html">Contact</a>
+                <a class="nav-link fw-bold" href="./contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/">About Us</a>
+                <a class="nav-link fw-bold" href="#">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/dashBoard.html">Dashboard</a>
+                <a class="nav-link fw-bold" href="./dashBoard.html">Dashboard</a>
               </li>
             </ul>
           </div>
@@ -56,7 +56,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/login-page.html">
+                <a class="nav-link" href="./login-page.html">
                     <button
                       class="btn nav-button-1 fw-bold text-light"
                       style="background-color: #7b4bff; border-color: #812dff">Login 
@@ -64,7 +64,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/Sign Up.html">
+                <a class="nav-link" href="./sign-up.html">
                     <button
                       class="btn nav-button-2 fw-bold text-light"
                       style="background-color: #ff4b66; border-color: #ff4e69"
@@ -81,7 +81,7 @@
 
       <!-- ================================== Courses ================================= -->
 
-      <h2 class="text-center">Start Learning With Study Zone</h2>
+      <h2 class="text-center fw-bold text-danger" style="font-size: 3rem;">Start Learning With Learning Hub</h2>
       <div>
         <div class="container mt-5">
             <div class="row example"></div>
