--- a/Pages/login-page.html
+++ b/Pages/login-page.html
@@ -38,12 +38,12 @@
     </style>
     
   </head>
-  <body>
+  <body class="background-gradiant">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-center shadow-lg p-3 mb-5 bg-white">
         <div class="container navbaar-container d-flex align-items-center justify-content-between p-1">
           
-          <a class="navbar-brand" href="#">E-Learning</a>
+          <a class="navbar-brand" href="../index.html">E-Learning</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -59,22 +59,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav justify-content-center flex-grow-1">
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./index.html">Home</a>
+                <a class="nav-link fw-bold" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/courses.html">Courses</a>
+                <a class="nav-link fw-bold" href="./courses.html">Courses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/courses.html">Tutorials</a>
+                <a class="nav-link fw-bold" href="./courses.html">Tutorials</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/contact.html">Contact</a>
+                <a class="nav-link fw-bold" href="./contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/">About Us</a>
+                <a class="nav-link fw-bold" href="#">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="./Pages/dashBoard.html">Dashboard</a>
+                <a class="nav-link fw-bold" href="./dashBoard.html">Dashboard</a>
               </li>
             </ul>
           </div>
@@ -82,7 +82,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/login-page.html">
+                <a class="nav-link" href="./login-page.html">
                     <button
                       class="btn nav-button-1 fw-bold text-light"
                       style="background-color: #7b4bff; border-color: #812dff">Login 
@@ -90,7 +90,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/Sign Up.html">
+                <a class="nav-link" href="./sign-up.html">
                     <button
                       class="btn nav-button-2 fw-bold text-light"
                       style="background-color: #ff4b66; border-color: #ff4e69"
@@ -106,7 +106,7 @@
       </nav>
 
 <!---main-container--->
-    <div class="container d-flex justify-content-center align-items-center min-vh-100 rounded">
+    <div class="container d-flex justify-content-center second-background-gradiant cart-box-shadow align-items-center min-vh-100 rounded">
  <!-------login-container-->  
         <div class="row border round-5 p-3 bg-white shadow box-area">
  <!-------left box----->
