--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-center shadow-lg p-3 mb-5 bg-white">
       <div class="container navbaar-container d-flex align-items-center justify-content-between p-1">
         
-        <a class="navbar-brand" href="#">E-Learning</a>
+        <a class="navbar-brand" href="./index.html">E-Learning</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,7 +46,7 @@
               <a class="nav-link fw-bold" href="./Pages/contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="./Pages/">About Us</a>
+              <a class="nav-link fw-bold" href="#">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold" href="./Pages/dashBoard.html">Dashboard</a>
@@ -65,7 +65,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./Pages/Sign Up.html">
+              <a class="nav-link" href="./Pages/sign-up.html">
                   <button
                     class="btn nav-button-2 fw-bold text-light"
                     style="background-color: #ff4b66; border-color: #ff4e69"
